on fishnets -- start

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1322,6 +1322,16 @@ Terahertz spectroscopy of ferroelectrics and related materials
 
 /*}}}*/
 % -- Fishnets, meshes and EOT --/*{{{*/
+@article{wood1902remarkable,
+  title={On a remarkable case of uneven distribution of light in a diffraction grating spectrum},
+  author={Wood, Robert Williams},
+  journal={Proceedings of the Physical Society of London},
+  volume={18},
+  number={1},
+  pages={269},
+  year={1902},
+  publisher={IOP Publishing}
+}
 @article{weiner2011electromagnetics,
   title={The electromagnetics of light transmission through subwavelength slits in metallic films},
   author={Weiner, John},
