on cdh and yslits

--- a/result.tex
+++ b/result.tex
@@ -1099,6 +1099,9 @@ In the above discussion, elaborated the mechanism of plane wave transmission thr
 However, due attention must be paid to whether the conventional scattering parameter method gives correct results, since this obviously classifies among the structures with strong coupling between the neighbouring cells: A great portion of the resonant energy is carried by the surface plasmons that were shown not to be localized inside the gap. On the contary, SPP can easily couple with those on nearby metallic surfaces, forming slot-waveguide modes \cite{weiner2011electromagnetics}.
 
 The current-driven homogenisation setup simulates one unit cell in an exact periodic environment of other cells, and is fully  suitable even for structures with strong coupling of neighbouring cells. 
+
+%TODO  add CDH results for Yslits of different cell spacing: 
+The s-parameter method computes the same metallic structure, and only the phase of $r$ and $t$ differs at the monitor points. The spectra of $\Neff$ obtained by the s-parameter method are thus relatively weakly influenced by changes in the unit cell spacing $a_x$. For unit cells close to each other, CDH shows that the correctly retrieved dispersion curves start to substantially deviate from the (wrong) predictions of the s-parameter method.
 %% TODO we found out that the first two bands are exactly matched between s-parameter and CDH method; however close to the diffraction limit the SPPs hinder the use of s-parameters TODO
 
 %}}}
@@ -1167,7 +1170,8 @@ The current-driven homogenisation setup simulates one unit cell in an exact peri
 
 
 
-%{{{ TODO notes
+
+%{{{ 
 \paragraph{Extraordinary transmission}
 \add{
 	Perforated plates: J. Rayleigh, “On the dynamical theory of gratings,” Proc. R. Soc. London A 79 , 399-416 (1907) 
