--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1343,6 +1343,18 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={Optical Society of America}
 }
 
+
+@article{rayleigh1907dynamical,
+  title={On the dynamical theory of gratings},
+  author={Rayleigh, Lord},
+  journal={Proceedings of the Royal Society of London. Series A, Containing Papers of a Mathematical and Physical Character},
+  volume={79},
+  number={532},
+  pages={399--416},
+  year={1907},
+  publisher={JSTOR}
+}
+
 @article{croenne2009left,
   title={Left handed dispersion of a stack of subwavelength hole metal arrays at terahertz frequencies},
   author={Cro{\"e}nne, Charles and Garet, Fr{\'e}d{\'e}ric and Lheurette, {\'E}ric and Coutaz, Jean-Louis and Lippens, Didier},
@@ -1463,7 +1475,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   pages={46--49},
   year={2012}
 }
-\cite{porterfield1994resonant, ulrich1967far, ulrich1967effective, vogel1964transmission}
 @article{ulrich1967effective,
   title={Effective low-pass filters for far infrared frequencies},
   author={Ulrich, R},
@@ -1513,6 +1524,16 @@ Terahertz spectroscopy of ferroelectrics and related materials
   pages={4245--4247},
   year={2011},
   publisher={Optical Society of America}
+}
+@article{ebbesen1998extraordinary,
+  title={Extraordinary optical transmission through sub-wavelength hole arrays},
+  author={Ebbesen, Thomas W and Lezec, H J and Ghaemi, HF and Thio, Tineke and Wolff, PA},
+  journal={Nature},
+  volume={391},
+  number={6668},
+  pages={667--669},
+  year={1998},
+  publisher={Nature Publishing Group}
 }
 
 
