--- a/result.tex
+++ b/result.tex
@@ -356,7 +356,7 @@ A modification of this \textit{double split-ring} design includes cross-connecti
 
 The square "ring" resonator (Fig. \ref{fg_SRRothers}d) is also widely used, without any substantial difference from the round SRR.
 
-The \textit{omega structure} was designed to emulate the operation of a SRR and a wire simultaneously, by interconnecting the ends of a SRR along the $x$-axis (Fig. \ref{fg_SRRothers}e).
+The \textit{omega structure} was designed to emulate the operation of a SRR and a wire simultaneously \cite[pp. 62--72]{croenne2009controle}, by interconnecting the ends of a SRR along the $x$-axis (Fig. \ref{fg_SRRothers}e).
 
 All SRR structures in Fig. \ref{fg_SRRothers} can be made flat in the plane perpendicular to the magnetic field, which facilitates their fabrication. At terahertz and higher frequencies, using a thin metal film should not be much detrimental to the SRR conductivity, since the skin depth caused by eddy currents is often submicroscopic \cite{gibbons2010scalable}.
 
@@ -1032,18 +1032,19 @@ The highest frequency in the plots was determined by the onset of the first diff
 \begin{figure}[htb] %{{{ fg_yslit_xscan 
 	\caption{\textbf{(a)} Reflectance of a metallic sheet $20$ $\mu$m thick, with slits of periodicity $a_x = 100$ $\mu$m and of variable width $d_x$. \textbf{(b)} The imaginary part of the retrieved refractive index for a metamaterial built by stacking the same slits with periodicity $a_z = 100$ $\mu$m.  The values retrieved by the scattering parameter method become invalid near 3 THz, see accompanying text.}
 	% todo Fishnet resolution=2.000e-06 cellsize=1.000e-04 cellsizexy=1.000e-04 slabthick=2.000e-05 yholesize=inf.dat xholesize=*
-	} \label{fg_yslit_xscan}  \centering
+	\label{fg_yslit_xscan}  \centering
 \begin{overpic}[width=0.48\textwidth]{img-meep/yslit_xscan_d20_r.pdf}\put(-1,80){\textbf{(a)}}\end{overpic}
 \begin{overpic}[width=0.48\textwidth]{img-meep/yslit_xscan_d20_ni.pdf}\put(-1,80){\textbf{(b)}}\end{overpic}\\
 \end{figure}
 %}}}
-\paragraph{Standing surface plasmon resonance}%{{{
+\paragraph{Standing surface plasmon resonance} %{{{
 At a frequency just below the onset of diffraction, a relatively narrow notch in the reflectance spectrum is observed. The frequency where $|r|$ drops close to zero depends on the slab thickness $d_z$ -- which will be shown later -- and on the slit width $d_x$. In the above figures where $d_z$ was fixed at $20$ $\upmu$m, the lowest frequency of the notch around $2.8$ THz is reached for $d_x/a_x \sim 0.3$ (see Fig. \ref{fg_yslit_xscan}a). 
 
 For a narrower or wider slit, the frequency of the notch increases and eventually approaches the diffraction limit of $3.0$ THz. 
 The notch also becomes narrower in spectrum, but does not appreciably reduce its depth. Some frequency can always be found at which nearly 100 \% of the energy is transmitted through the structure.
 
-This phenomenon known as \textit{extraordinary transmission} is mediated by electromagnetic waves propagating along the metallic surface (i.e. parallel to the $x-$ axis. The field distribution is similar to surface plasmons-polaritons (SPP), but particularly in the terahertz range and below it, it is bound to the structure also by means of its structuring. Such a wave is known as \textit{spoof surface plasmons}.  % todo cite
+The transmission is mediated by electromagnetic waves propagating along the metallic surface, i.e., parallel to the $x-$ axis. 
+The field distribution is similar to surface plasmons-polaritons (SPP), but particularly in the terahertz range and below it, it is bound to the structure also by means of its corrugation. Such a wave is known as \textit{spoof surface plasmons}.  % todo cite
 The notch in reflectance is always observed at the exact frequency that stipulates that the plasmon wavelength is equal to the unit cell size $a_x$, and has a direct connection with the \textit{Wood's anomaly} \cite{wood1902remarkable},  observed in 1902 as an abrupt drop in reflectance on a metallic grating.
 
 Since the structure and fields are symmetric with regards to the $x$-axis, an equal amplitude of plasmons propagating forward and backward is excited. They form a standing plasmonic wave, with points of zero oscillating current (nodes) centered at the slit centers. The extraordinary transmission relies on coupling of the incoming plane wave to SPP, coupling of SPP to their mirror counterpart on the rear side of the structure, and re-radiation of the plane wave. 
@@ -1057,19 +1058,17 @@ Surface-plasmon assisted transmission through a slit was studied earlier and opt
 % close to the slit, many evanescent modes overlap; can be uniquely decomposed
 % for slits in thick slabs: theory of waveguide	Ph. Lalanne et al., J. Opt. A Pure Appl. Opt. 2, 48 (2000).
 
-
 For this to happen, however, extraordinary transmission requires strict periodicity of the slits along the $x$-axis, and symmetry of the front and rear sides of the structure along the $z$-axis. A numerical experiment (not shown here) has proven that the $|r| \sim 0$ notch disappears when a dielectric substrate approaches one side of the structure. The dielectric did not have to touch the metal directly; a distance similar the approximate decay length of the surface plasmons or similar to $a_x$, was sufficient. When the dielectric substrate was added symmetrically from both sides, the extraordinary transmission was restored.
 
 %}}}
 \begin{figure}[htb] %{{{ fg_yslit_dscan
 	\caption{\textbf{(a)} Reflectance of a metallic sheet with slits of periodicity $a_x = 100$ $\mu$m and of  $d_x = 20$ $\mu$m, with variable thickness $d_z$. \textbf{(b)} The imaginary part of the refractive index for a metamaterial built by stacking the same slits with periodicity $a_z = 100$ $\mu$m. The values were again retrieved by the scattering parameter method. }
 	% todo  Fishnet xholesize=2.000e-05 resolution=2.000e-06 cellsize=1.000e-04 cellsizexy=1.000e-04 yholesize=inf.dat slabthick=*
-	} \label{fg_yslit_dscan}  \centering
+	\label{fg_yslit_dscan}  \centering
 \begin{overpic}[width=0.48\textwidth]{img-meep/yslit_dscan_x20_HR_r.pdf}\put(-1,80){\textbf{(a)}}\end{overpic}
 \begin{overpic}[width=0.48\textwidth]{img-meep/yslit_dscan_x20_HR_ni.pdf}\put(-1,80){\textbf{(b)}}\end{overpic}\\
 \end{figure}
 %}}}
-
 \paragraph{Effect of metallic slab thickness}%{{{
 % Weiner-Transmission_through_metallic_slits.pdf
 % references to many papers on subwavelength slit and aperture transmission
@@ -1100,7 +1099,9 @@ However, due attention must be paid to whether the conventional scattering param
 
 The current-driven homogenisation setup simulates one unit cell in an exact periodic environment of other cells, and is fully  suitable even for structures with strong coupling of neighbouring cells. 
 
-%TODO  add CDH results for Yslits of different cell spacing: 
+%TODO  discuss CDH results for Yslits of different cell spacing: 
+% TODO \ref{fg_cdh_yslit}a -- add about convergence of s-param method
+
 The s-parameter method computes the same metallic structure, and only the phase of $r$ and $t$ differs at the monitor points. The spectra of $\Neff$ obtained by the s-parameter method are thus relatively weakly influenced by changes in the unit cell spacing $a_x$. For unit cells close to each other, CDH shows that the correctly retrieved dispersion curves start to substantially deviate from the (wrong) predictions of the s-parameter method.
 %% TODO we found out that the first two bands are exactly matched between s-parameter and CDH method; however close to the diffraction limit the SPPs hinder the use of s-parameters TODO
 
@@ -1163,62 +1164,79 @@ The s-parameter method computes the same metallic structure, and only the phase 
 %pp. 4922-4930 (2005).
 %
 
+@article{rockstuhl2008light,
+  title={Light propagation in a fishnet metamaterial},
+  author={Rockstuhl, Carsten and Menzel, Christoph and Paul, Thomas and Pertsch, Thomas and Lederer, Falk},
+  journal={Physical Review B},
+  volume={78},
+  number={15},
+  pages={155102},
+  year={2008},
+  publisher={APS}
+}
+%
+
+@article{zhang2005near,
+  title={Near-infrared double negative metamaterials},
+  author={Zhang, Shuang and Fan, Wenjun and Malloy, KJ and Brueck, SRJ and Panoiu, NC and Osgood, RM},
+  journal={Optics Express},
+  volume={13},
+  number={13},
+  pages={4922--4930},
+  year={2005},
+  publisher={Optical Society of America}
+}
+
+
+
+
+
 % TODO \cite{jelinek2010fishnet}
 % TODO Jelineks
+% \cite{yahiaoui2012metallo,rockstuhl2008light}
 
-
-
-
-%{{{ 
 \paragraph{Extraordinary transmission}
-A natural modification of the above discussed structure is to add conductive connections between the metallic stripes. Transmission through perforated sheets was studied in 1907 by Rayleigh \cite{rayleigh1907dynamical} % todo with the main conclusion that.. 
-and half a century later, its resonant behaviour in the metallic mesh has been later used as a microwave and far-infrared filter \cite{ulrich1967effective,ulrich1967far}. 
+A natural modification of the structure discussed  above is to add conductive connections between the metallic stripes, forming a perforated metallic sheet which is also denoted as a \textit{mesh}, or within a context of metamaterials, a \textit{fishnet} or \textit{sub-wavelength hole array}. 
 
-Already in 1950s the sheets were proposed to be periodically arranged into an artificial dielectric \cite[p. 58]{brown1953artificial} with index of refraction lower than 1, but the field propagated parallel to the slabs, and the operation of the structure was different than what is employed nowadays.  % http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
-	
-	has been known for half a century \cite{vogel1964transmission}
-	... cite ebbesen?  %Babinet principle?
-	... EOT transmission --- Aperture-array transmission --- Wood anomaly --- standing surface plasmons
-	... appears hard to be homogenized by the s-parameters \cite{wang2010composite} -- establish why
-	... Improved cross-shaped pattern for better spectral selectivity \cite{porterfield1994resonant}
-	... fishnet achieves relatively low losses, since it is optimised for thick and short conduction paths 
+Already in 1950s the perforated sheets were proposed to be periodically arranged to form an artificial dielectric \cite[p. 58]{brown1953artificial} with index of refraction lower than 1, but the field was supposed to propagate parallel to the slabs.  % thus not exhibiting the resonant phenomena http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
+The spectral selectivity of a metallic mesh perpendicular to the wave vector was employed in 1960s as a microwave and far-infrared filter \cite{ulrich1967effective,ulrich1967far, vogel1964transmission}.  %% TODO rewrite historical, connect with slits?
+However,  Lord Rayleigh's studies on resonances in metallic gratings dates back to 1907 \cite{rayleigh1907dynamical}, when he focused on explaining the \textit{Wood's anomaly} discovered few years earlier to cause a sharp drop of grating reflectance caused by surface plasmons. % todo with the main conclusion that.. 
 
-	Wood anomaly in hole arrays
-	}
+Greater attention of scientific community returned to the perforated metallic sheets with the advent of plasmonics. Periodic patterning of the metallic surface near a sub-wavelength hole enables the incident light to couple to surface plasmons, transfer the energy through the hole, and finally re-radiate it again at the rear side in a similar way as described on the example of metallic slits. 
+The transmitted power can be orders of magnitude higher than predicted by Bethe's law of inverse fourth power of the hole dimensions. The  %todo re-invented?
+phenomenon was thus named as \textit{extraordinary transmission} \cite{ebbesen1998extraordinary}.
+Periodically arranging the holes is equivalent to structuring of the surroundings of a single hole.
+
+%Under a correct choice of parameters, the re-radiated wave has an opposite sign to the incoming one. In 2003, the 
+
+%This phenomenon is similar to the transmission through narrow metallic slits, with the difference that the  structure exhibits 
+% TODO what is the enhancement of a single non-corrugated hole?
+
+% TODO \ref{fg_cdh_yslit}b -- add again about convergence of s-param method
+
 
 \paragraph{Negative index of refraction}
-Although fishnets appear to have nothing in common with other negative-index structures, their interaction with electromagnetic wave in fact bears a close resemblance to these: The conventional explanation of the negative refractive index of fishnets is based on the combination of negative effective permittivity and permeability. 
+An important difference  fishnet achieves relatively low losses, since it is optimised for thick and short conduction paths 
 
-The former, $\eeff'<0$ should result from the inductive effect of the metallic connections, acting similar to the wires oriented along the $x-$axis.  
-The fishnet metamaterial is highly anisotropic, and the effective index of refraction is valid roughly within 0.1 rad from the axis, as was noted in the early study on artificial dielectrics \cite{brown1953artificial}. Under higher angles, jelaborated e.g.  index of refraction 
+The conventional explanation of the negative refractive index of fishnets is based on the combination of negative effective permittivity and permeability. The former, $\eeff'<0$ should result from the inductive effect of the metallic connections, forming an electric dipole opposite to the incident electric field in a way similar to the wires oriented along the $x-$axis.  
+The magnetic response is formed by individual resonances localised close to the fishnet holes, which exhibit a magnetic dipole moment.
 
-The latter should be formed by individual resonances localised close to the fishnet holes, which exhibit a magnetic dipole moment.
+This kind of metamaterial appears hard to be homogenized by the s-parameters \cite{wang2010composite}. The cause again appears to be in resonances 
+%... Improved cross-shaped pattern for better spectral selectivity %\cite{porterfield1994resonant}
+%TODO Bad convergence of s-paraemetr 
+\cite[Fig. ]{croenne2009controle}
+
+%TODO NOTE: Identifying the individual resonance with the |t|=0 point is confusing; what we observe is the Fano lineshape where |t|=0 frequency depends also on the background scattered wave. When the background is weak, the resonance frequency identifies with  |t|=0. When the background reflectance is close to 100%, the resonance identifies with |r|=0. And it goes more complicated when the background has intermediate values.
 
 
-\paragraph{Negative effective index of refraction}%{{{
-\add{
-	...  wave propagation can be also understood through the "hopping model"
+%Although fishnets appear to have nothing in common with other negative-index structures, their interaction with electromagnetic wave in fact bears a close resemblance to these: 
+	%... todo?  wave propagation can be also understood through the "hopping model"
 
 	% for nearly flat structures, where most of the fields are confined within a slab perpendicular to $\KK$, a
 
-	\cite{yahiaoui2012metallo,rockstuhl2008light}
-	}
-%}}}
 
-
-\paragraph{Experimental results}
-\add{
-	... spectra of laser-drilled fishnets
-
-	... Part of the fishnets were made of two foils as a metal-insulator-metal structure, but their spectra were also hard to interpret.
-
-	... Our group received another fishnet sample made by automated mechanical drilling (Fig. \ref{fg_fishnet_mechanical}) into a double-sided circuit board blank, consisting of two 30 $\upmu$m copper foils glued to a plastic. The sample was measured by the terahertz spectroscopy yielding relatively complicated spectra, which could not be reasonably matched by any of the simulations. We assume that the clash between the measured and simulated values comes from the imprecision in the sample itself, namely from the burrs from drilling.
-\begin{figure}[ht] \caption{A drilled fishnet with $500\times 500$ $\mu$m periodicity. The inclined view from the bottom side shows the burrs that were probably responsible for the large difference of the measured and simulated spectra.}  \centering \includegraphics[width=.8\textwidth]{img/fishnet.pdf} \label{fg_fishnet_mechanical} \end{figure}
-	}
-
-%}}}
-\begin{figure}[ht] %{{{ fg_mesh
-	\caption{Microscopic photographs of fishnets cut from a 5 $\mu$m thick stainless steel foil, \textbf{(a)} holes of $180\times 200$ $\mu$m,  \textbf{(b)} holes of $230\times 255$ $\mu$m, cut by a "z"-shaped movement of the beam. Periodicity of both fishnets is $300\times 300$ $\mu$m, real size of both images is $1.2\times 0.9$ mm.  } \label{fg_mesh} \centering 
+\begin{figure}[ht] %{{{ fg_fishnet28_photo
+	\caption{Microscopic photographs of fishnets cut from a 5 $\mu$m thick stainless steel foil, \textbf{(a)} holes of $180\times 200$ $\mu$m,  \textbf{(b)} holes of $230\times 255$ $\mu$m, cut by a "z"-shaped movement of the beam. Periodicity of both fishnets is $300\times 300$ $\mu$m, real size of both images is $1.2\times 0.9$ mm.  } \label{fg_fishnet28_photo} \centering 
 	\begin{overpic}[height=.40\textwidth]{img/fishnet-sample28a-180x200hole-300x300pitch_vert.pdf}  \put(0,94) {\textbf{(a)}} 
 	\end{overpic}
 	\begin{overpic}[height=.40\textwidth]{img/fishnet-sample28c-230x255hole-300x300pitch_vert.pdf}  \put(0,94) {\textbf{(b)}} 
@@ -1226,6 +1244,35 @@ The latter should be formed by individual resonances localised close to the fish
 	\end{overpic}
 \end{figure}
 %}}}
+\begin{figure}[t] %fg_expe_fishnets%{{{
+	\caption{Experimental and simulated amplitude of transmittance for fishnets \textbf{(a)} with 180$\times$200 $\mu$m holes and with \textbf{(a)} 
+		%todo \textbf{(b)} transmittance and \textbf{(c)} effective index of refraction $\Neff$ (real part solid, imaginary part dashed) for the dielectric slab of 15\% fill fraction in a 300 $\upmu$m unit cell, and varied permittivity of the dielectric $\epsrl \in \{4,12,20\}$
+	} 
+		\label{fg_expe_fishnets} 
+		\centering \vspace{-3mm}
+\begin{tabular}{r}
+\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_ap.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
+\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_cp.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
+%\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_cs.pdf} \put (-1,27) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
+%\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_as.pdf} \put (-1,27) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
+\end{tabular}
+\end{figure}
+%}}}
+\paragraph{Experimental results} %{{{
+By femtosecond laser machining of steel foils, we have fabricated series of fishnets (Fig. \ref{fg_fishnet28_photo}). 
+The experimental transmittance spectra of these two samples are presented in Fig. \ref{fg_fishnet28_r}
+
+%TODO add? Part of the fishnets were made of two foils as a metal-insulator-metal structure, but their spectra were also hard to interpret.
+
+%Our group received another fishnet sample made by automated mechanical drilling (Fig. \ref{fg_fishnet_mechanical}) into a double-sided circuit board blank, consisting of two 30 $\upmu$m copper foils glued to a plastic. %?? material, thickness?
+%The sample was measured by the terahertz spectroscopy yielding relatively complicated spectra, which could not be reasonably matched by any of the simulations. We assume that the clash between the measured and simulated values comes from the imprecision in the sample itself, namely from the burrs from drilling.
+%\begin{figure}[ht]  %fg_fishnet_mechanical
+	%\caption{A drilled fishnet with $500\times 500$ $\mu$m periodicity. The inclined view from the bottom side shows the burrs that were probably responsible for the large difference of the measured and simulated spectra.}  \centering \includegraphics[width=.8\textwidth]{img/fishnet.pdf} \label{fg_fishnet_mechanical} 
+%\end{figure}
+
+%}}}
+
+
 \paragraph{Quadrupole resonance}%{{{
 % TODO 
 For simulation of the fishnet, the resolution in the FDTD simulation was deliberately set to very coarse, with a voxel dimension of 10 $\mu$m. The discretisation error has broken the mirror symmetry of the fishnet hole (see Fig. \ref{fg_fnquadrup}), and introduced a slight electric dipole into the predominantly quadrupole mode, leading to its nonzero coupling of to the propagating wave. This resulted in narrow resonances emerging at 880 and 710 GHz in Fig. \ref{fg_expe_fishnets}, which explains the experimentally observed resonance notches close to these frequencies.  
@@ -1241,23 +1288,9 @@ For simulation of the fishnet, the resolution in the FDTD simulation was deliber
   \begin{minipage}[b]{0.6\textwidth}
 	  \caption{
 	  Electric field of the quadrupole mode in a fishnet with 180$\times$200 $\mu$m hole sizes. Field vectors are represented by black arrows in the $x$-$y$ plane of the fishnet; due to symmetry, the $E_z$ component in this plane is zero. The color map shows the magnitude of the $\E$ vector, the brighter values correspond to more intensive field. Surrounding light-gray structure is the metal of the fishnet.\\
-}\vfill \label{fg_fnquadrup}
+  \vspace{20mm}} \label{fg_fnquadrup}
   \end{minipage}  
 \end{figure} 
-%}}}
-\begin{figure}[t] %fg_expe_fishnets%{{{
-	\caption{Experimental and simulated amplitude of transmittance for fishnets \textbf{(a)} with 180$\times$200 $\mu$m holes and with \textbf{(a)} 
-		%todo \textbf{(b)} transmittance and \textbf{(c)} effective index of refraction $\Neff$ (real part solid, imaginary part dashed) for the dielectric slab of 15\% fill fraction in a 300 $\upmu$m unit cell, and varied permittivity of the dielectric $\epsrl \in \{4,12,20\}$
-	} 
-		\label{fg_expe_fishnets} 
-		\centering \vspace{-3mm}
-\begin{tabular}{r}
-\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_ap.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
-\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_cp.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
-%\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_cs.pdf} \put (-1,27) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
-%\begin{overpic}[width=0.95\textwidth]{img-expe/expe_laserfishnets_t_as.pdf} \put (-1,27) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
-\end{tabular}
-\end{figure}
 %}}}
 
 
